--- a/About.html
+++ b/About.html
@@ -25,7 +25,7 @@
     >
       <h4>2Fast2Type</h4>
       <div class="flex w-1/4 justify-around">
-        <a href="">
+        <a href="index.html">
           <h5>Home</h5>
         </a>
         <a href="">
