--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a href="">
           <h5>Home</h5>
         </a>
-        <a href="">
+        <a href="About.html">
           <h5>About</h5>
         </a>
       </div>
