https://github.com/dwmd12/2fast2type.github.io

--- a/About.html
+++ b/About.html
@@ -41,9 +41,15 @@
         A simple typing game created with HTML, CSS, and JavaScript. The creator
         use Tailwind CSS as the CSS Framework. For generating random words, the
         creator takes advantages of the Free random words generator API that you
-        can visit here. What diferentiate between all three difficulties are the
-        amount of time that you have to complete the certain words. The creator
-        hopes you will enjoy this simple games. Best of Luck Dewa
+        can
+        <a
+          style="text-decoration: underline"
+          href="http://random-word-api.herokuapp.com/"
+          >visit here.
+        </a>
+        What diferentiate between all three difficulties are the amount of time
+        that you have to complete the certain words. The creator hopes you will
+        enjoy this simple games. Best of Luck Dewa
       </h4>
       <h4 class="mt-5" style="font-size: 20.43px; width: 50%">Best of Luck.</h4>
       <h4 class="mt-5" style="font-size: 20.43px; width: 50%">Dewa</h4>
