https://github.com/dwmd12/2fast2type.github.io

--- a/About.html
+++ b/About.html
@@ -48,8 +48,8 @@
           >visit here.
         </a>
         What diferentiate between all three difficulties are the amount of time
-        that you have to complete the certain words. The creator hopes you will
-        enjoy this simple games. Best of Luck Dewa
+        that you have to complete a certain word. The creator hopes you will
+        enjoy this simple game.
       </h4>
       <h4 class="mt-5" style="font-size: 20.43px; width: 50%">Best of Luck.</h4>
       <h4 class="mt-5" style="font-size: 20.43px; width: 50%">Dewa</h4>
